# txtad

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  txtad-builder.nginx  txtad-builder.service  txtad-game.nginx  txtad-game.service  vcpkg-configuration.json  vcpkg.json
builder/: builder.config.example  package.json
builder/web/static/: site.webmanifest
builder/web/static/css/: custom.css  game.css  general.css
builder/web/static/js/: app-init.js  events.js  game.js  general.js  tests.js  typeahead.js
builder/web/static/scss/: custom.scss
builder/web/templates/: ctx-edit.html  ctx.html  game.html  index.html  login.html  register.html  txt-edit.html
builder/web/templates/elements/: worlds.html
builder/web/templates/forms/: event-inp.html  free-inp.html  free-txtarea.html  str_list.html
builder/web/templates/layout/: layout.html  navbar.html
builder/web/templates/objects/: attribute-edit.html  attributes-editable.html  attributes.html  ctx.html  listener-edit.html  listener-summary.html  listeners-editable.html  listeners.html  txt-edit.html  txt-editable.html  txt.html
data/games/creep/: .builder  settings.json
data/games/creep/game_files/: catch.ctx  chat.ctx  general.ctx  mechanics.ctx  minds.ctx
data/games/creep/game_files/dialogs/welcome/: 01_hello.ctx  02_hello.ctx  03_hello.ctx
data/games/creep/game_files/mindsets/: dusty.ctx
data/games/creep/game_files/texts/start/: 00.text  01.text  02.text
data/games/original/: .builder  settings.json  tests.json
data/games/original/game_files/: catch.ctx  general.ctx  mechanics.ctx  start.text  start.txt
data/games/original/game_files/items/: heiltrank.ctx  pdg.ctx
data/games/original/game_files/rooms/: closet.context  closet.ctx  freedom.context  freedom.ctx
data/games/original/web/css/: main.css
data/games/test/: .builder  settings.json
data/games/test/web/css/: main.css
game/: CMakeLists.txt  Makefile  README.md
game/src/: main.cc
game/src/game/: game.cc  game.h  user.cc  user.h
game/src/server/: server_frame.cc  server_frame.h  websocket_server.cc  websocket_server.h
game/src/utils/: defines.h  utils.cc  utils.h
game/src/utils/eventmanager/: eventmanager.h
game/test/: main.cc  test_context.cc  test_eventmanager.cc  test_expression_parser.cc  test_utils.cc
game/web/: index.html
game/web/css/: main.css
game/web/js/: main.js
shared/objects/context/: context.cc  context.h
shared/utils/: utils.cc  utils.h
shared/utils/context/: context.h
shared/utils/eventmanager/: eventmanager.h  listener.h
shared/utils/fuzzy_search/: fuzzy.cc  fuzzy.h
shared/utils/parser/: expression_parser.cc  expression_parser.h
src/builder/: main.cc  test_builder.cc
src/builder/creator/: creator.h  manager.h
src/builder/game/: builder_game.cc  builder_game.h
src/builder/server/: server.cc  server.h
src/builder/utils/: defines.cc  defines.h  http_helpers.cc  http_helpers.h  jinja_helpers.cc  jinja_helpers.h  reflections.h
src/game/: main.cc
src/game/.cache/clangd/index/: defines.h.7A7374741E7309A5.idx  eventmanager.h.D944D82942C0D746.idx  game.cc.717F7E999B6F8033.idx  game.h.782F8EAD16EE7F34.idx  listener.h.590094FAE96B9A4F.idx  main.cc.39DB7867BD24AD90.idx  main.cc.CE27BBB8FF80710A.idx  test_eventmanager.cc.503974465D54CAAB.idx  test_expression_parser.cc.C44C86159778BBF2.idx  test_utils.cc.1501329FB7530BEA.idx  user.cc.8346755D5626837F.idx  user.h.58A5AEDCB9294166.idx  websocket_server.cc.E3274429804772F5.idx  websocket_server.h.4F7004A939E1619F.idx
src/game/game/: game.cc  game.h  user.cc  user.h
src/game/server/: websocket_server.cc  websocket_server.h
src/game/test/: helpers.cc  helpers.h  main.cc  test_context.cc  test_context_stack.cc  test_eventmanager.cc  test_expression_parser.cc  test_game.cc  test_game_file_parser.cc  test_text.cc  test_utils.cc
src/game/utils/: defines.cc  defines.h
src/shared/objects/context/: context.cc  context.h
src/shared/objects/settings/: settings.h
src/shared/objects/tests/: test.cc  test.h  test_case.cc  test_case.h
src/shared/objects/text/: text.cc  text.h
src/shared/utils/: context_stack.h  defines.h  test_helpers.cc  test_helpers.h  utils.cc  utils.h
src/shared/utils/eventmanager/: context_stack.cc  context_stack.h  eventmanager.h  listener.cc  listener.h
src/shared/utils/fuzzy_search/: fuzzy.cc
src/shared/utils/git_wrapper/: git_wrapper.cc  git_wrapper.h
src/shared/utils/parser/: expression_parser.cc  expression_parser.h  game_file_parser.cc  game_file_parser.h  pattern_parser.cc  pattern_parser.h  test_file_parser.cc  test_file_parser.h
